# flc-tui-widgets

./: Cargo.toml  README.md
src/: lib.rs  widgets.rs
src/widgets/: paragraph.rs  reflow.rs
tests/: widgets_paragraph.rs
