[package]
name = "flc-tui-widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27"
ratatui = { version = "0.26", features = ["unstable-widget-ref"] }

stability = "0.2"

unicode-width = "0.1"
unicode-segmentation = "0.1"
